:bug: (Scrolling) Fix scrollbar not showing properly

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -164,7 +164,6 @@ footer.modal-open {
     left: 0px;
     top: 0;
     bottom: 30px;
-    overflow: auto;
 }
 
 .horizontal-table {
